# deck

./: .env  40-streamdeck.rules  Caddyfile  Cargo.toml  README.md
assets/background/: reference.clip
libs/: install.md
src/: info.rs  lib.rs  main.rs
src/core/: deck.rs  entity.rs  image.rs  mod.rs  routes.rs  server.rs  websocket.rs
