[package]
name = "deck"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }

axum = "0.8.4"
dotenv = "0.15.0"
mirajazz = "0.3.0"
owo-colors = "4.2.1"

tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0.140"
axum-macros = "0.5.0"
image = { version = "0.25.6" }
