[package]
name = "deck"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
axum = "0.8.4"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0.140"

elgato-streamdeck = {version = "0.10.2", features = ["async", "tokio"]}
image = { version = "0.25.6" }
owo-colors = "4.2.1"

axum-macros = "0.5.0"
